Fix: improve layout white space

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,3 @@
     display: none;
   }
 }
-
-@layer components {
-  .banner-title {
-    -webkit-text-stroke: 2px #000000;
-  }
-}
